# fsvng

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchDependencies.cmake
docs/: ARCHITECTURE.md  BUILDING.md  PORTING.md
shaders/: cursor.frag  cursor.vert  node.frag  node.vert  picking.frag  picking.vert  text.frag  text.vert
src/: CMakeLists.txt  main.cpp
src/animation/: Animation.cpp  Animation.h  Morph.cpp  Morph.h  Scheduler.cpp  Scheduler.h
src/app/: App.cpp  App.h  Config.cpp  Config.h
src/camera/: Camera.cpp  Camera.h
src/color/: ColorSystem.cpp  ColorSystem.h  Spectrum.cpp  Spectrum.h
src/core/: FsNode.cpp  FsNode.h  FsScanner.cpp  FsScanner.h  FsTree.cpp  FsTree.h  PlatformUtils.cpp  PlatformUtils.h  Types.h
src/geometry/: CollapseExpand.cpp  CollapseExpand.h  DiscVLayout.cpp  DiscVLayout.h  GeometryManager.cpp  GeometryManager.h  MapVLayout.cpp  MapVLayout.h  TreeVLayout.cpp  TreeVLayout.h
src/renderer/: MeshBuffer.cpp  MeshBuffer.h  NodePicker.cpp  NodePicker.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  SplashRenderer.cpp  SplashRenderer.h  TextRenderer.cpp  TextRenderer.h
src/ui/: Dialogs.cpp  Dialogs.h  DirTreePanel.cpp  DirTreePanel.h  FileListPanel.cpp  FileListPanel.h  ImGuiBackend.cpp  ImGuiBackend.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  PulseEffect.cpp  PulseEffect.h  StatusBar.cpp  StatusBar.h  ThemeManager.cpp  ThemeManager.h  Toolbar.cpp  Toolbar.h  ViewportPanel.cpp  ViewportPanel.h
tests/: CMakeLists.txt  test_Camera.cpp  test_ColorSystem.cpp  test_FsNode.cpp  test_FsScanner.cpp  test_MapVLayout.cpp  test_Morph.cpp  test_TreeVLayout.cpp
